Update MyPlugin.java